--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Stickers</string>
     <string name="text_field_hint">Write something here…</string>
+    <string name="use_glide">Use Glide</string>
+    <string name="use_fresco">Use Fresco</string>
+    <string name="clear_cache">Clear cache</string>
 </resources>
